[gd_scene format=3 load_steps=2]

[ext_resource type="Script" path="res://Scripts/Dev/dev_menu.gd" id="1"]

[node name="DevMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -120.0
offset_right = 120.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/VBox"]
layout_mode = 2
text = "Dev Scene Test Menu"

[node name="Battle3DButton" type="Button" parent="CenterContainer/PanelContainer/VBox"]
layout_mode = 2
text = "Test Battle 3D"

[node name="FirstPersonRoomButton" type="Button" parent="CenterContainer/PanelContainer/VBox"]
layout_mode = 2
text = "Test First Person Room"

[node name="HubButton" type="Button" parent="CenterContainer/PanelContainer/VBox"]
layout_mode = 2
text = "Test Hub"

[node name="Explore2DButton" type="Button" parent="CenterContainer/PanelContainer/VBox"]
layout_mode = 2
text = "Test Corridor / Explore2D"

